plugins {
    id 'java'
    id 'application'
    id 'com.dua3.javafxgradle7plugin' version '0.0.9'
}

compileJava {
    options.release.set(11)

    doFirst {
        options.compilerArgs += [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls',
                '--add-modules', 'javafx.fxml',
                '--add-modules', 'javafx.base',
        ]
    }
}

application {
    getMainClass().set('driver.Driver')
}

javafx {
    version = "16"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

test {
    useJUnitPlatform()
}
